syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat;
import "message.proto";
import "google/protobuf/timestamp.proto";

service History {
  rpc GetUserHistory(GetUserHistoryRequest) returns (GetUserHistoryResponse);
}

message GetUserHistoryRequest {
  int64 user_id = 1;
  google.protobuf.Timestamp older_than = 2;
}

message GetUserHistoryResponse {
  repeated Message messages = 1;
}